--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <!-- <text id="text-1" x="15" y="115" >ux</text>
                <text id="text-1" x="15" y="115" >communication</text> -->
             </svg>
-            <img src="img/pointer.png" alt="pointer" />
+            <!-- <img src="img/pointer.png" alt="pointer" /> -->
           </div>
           <div id="about-open" class="main-wrapper-about-area2">
             <h4>
