no puzzles about

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
       <div class="header-wrapper">
         <div class="header-area-1">
-          <a href="#indexSection">Marta Netza</a>
+          <a href="#indexSection">marta netza</a>
         </div>
         <div class="header-area-2">
-          <a id="nav-portfolio" href="#portfolioSection">Portfolio</a>
-          <a id="nav-about" href="#aboutSection">About</a>
-          <a id="nav-contact" href="#contactSection">Contact</a>
+          <a id="nav-portfolio" href="#portfolioSection">portfolio</a>
+          <a id="nav-about" href="#aboutSection">about</a>
+          <a id="nav-contact" href="#contactSection">contact</a>
         </div>
         <div class="nav-icon3" id="nav-icon3">
           <span></span>
@@ -77,67 +77,66 @@
       </section>
       <section id="aboutSection" class="aboutSection">
         <div class="main-wrapper-about">
+          <h2>Who am I ?</h2>
           <div class="main-wrapper-about-area1">
-            <svg
-              id="Layer_1"
-              data-name="Layer 1"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 418.05 418.04"
-            >
-              <defs></defs>
-              <path
-                id="cls-0"
-                class="cls-0"
-                d="M141.92,199.39c0-15.48-.19-27.89-.19-34.19V89.75h75.46c6.3,0,51.13,0,57.42,0h74.91V165.2a8.49,8.49,0,0,1-12.27,7.63c-8.25-4.19-17.16-7.12-23.68-7.12-15.88,0-24.45,12.56-24.45,28s8.57,28,24.45,28c6.52,0,15.44-2.71,23.69-6.73a8.48,8.48,0,0,1,12.26,7.56v74.91H274.61a8.48,8.48,0,0,1-7.56-12.26c4-8.25,6.73-17.17,6.73-23.69,0-15.88-12.55-24.45-28-24.45s-28.05,8.57-28.05,24.45c0,6.52,2.93,15.43,7.12,23.68a8.49,8.49,0,0,1-7.62,12.27H141.73V222.63c0-6.29.19-7.75.19-23.24"
-                transform="translate(-140.73 -88.62)"
-              />
-
-              <path
-                id="cls-1"
-                class="cls-1"
-                d="M557.78,222v75.46H482.87a8.48,8.48,0,0,0-7.56,12.26c4,8.25,6.73,17.17,6.73,23.69,0,15.88-12.55,24.45-28,24.45S426,349.24,426,333.36c0-6.52,2.93-15.43,7.12-23.68a8.49,8.49,0,0,0-7.62-12.27H350V222a8.49,8.49,0,0,0-12.27-7.62c-8.25,4.19-17.17,7.11-23.68,7.11-15.89,0-24.45-12.55-24.45-28s8.56-28.05,24.45-28.05c6.52,0,15.44,2.71,23.69,6.73A8.48,8.48,0,0,0,350,164.52V89.62H557.78V222Z"
-                transform="translate(-140.73 -88.62)"
-              />
-              <path
-                id="cls-2"
-                class="cls-2"
-                d="M141.73,373.32V297.87h74.9a8.48,8.48,0,0,0,7.56-12.26c-4-8.26-6.73-17.17-6.73-23.69,0-15.89,12.56-24.45,28-24.45s28,8.56,28,24.45c0,6.51-2.92,15.43-7.11,23.68a8.49,8.49,0,0,0,7.62,12.27h75.46v75.45A8.49,8.49,0,0,0,361.79,381c8.25-4.19,17.16-7.12,23.68-7.12,15.88,0,24.45,12.56,24.45,28.05s-8.57,28-24.45,28c-6.52,0-15.44-2.71-23.69-6.73a8.48,8.48,0,0,0-12.26,7.56v74.91H141.73V373.32Z"
-                transform="translate(-140.73 -88.62)"
-              />
-
-              <path
-                id="cls-3"
-                class="cls-3"
-                d="M385.94,429.69c-6.52,0-15.44-2.93-23.69-7.12A8.49,8.49,0,0,0,350,430.2v75.46H557.78V297.86H482.32a8.5,8.5,0,0,0-7.63,12.27c4.19,8.25,7.12,17.17,7.12,23.68,0,15.89-12.55,24.45-28,24.45s-28-8.56-28-24.45c0-6.52,2.71-15.44,6.73-23.69a8.48,8.48,0,0,0-7.56-12.26H350v74.91a8.47,8.47,0,0,0,12.26,7.56c8.25-4,17.17-6.73,23.69-6.73,15.88,0,24.44,12.56,24.44,28S401.82,429.69,385.94,429.69Z"
-                transform="translate(-140.73 -88.62)"
-              />
-              <text id="text-0" x="45" y="115">design</text>
-              <text id="text-1" x="275" y="115">code</text>
-              <text id="text-2" x="25" y="320">COMMUNICATION</text>
-              <text id="text-3" x="285" y="320">UX</text>
-              <!-- <text id="text-1" x="15" y="115" >ux</text>
-               <text id="text-1" x="15" y="115" >communication</text> -->
-            </svg>
-            <!-- <img src="img/pointer.png" alt="pointer" /> -->
+            <img
+              src="img/ilustracja_portfolio_1.png"
+              alt="illustration portfolio"
+            />
           </div>
-          <div id="about-open" class="main-wrapper-about-area2">
-            <h4>
+          <div class="main-wrapper-about-area2">
+            <h5>
               I'm Multimedia Design student who is enthusiastic about creating
               interactive content by using special effects such us graphics,
               animations and video. I enjoy translating ideas from words and
               visuals into coded websites.
-            </h4>
+            </h5>
             <p>
               I'm currently studying at Copenhagen School of Technology and
               Design to gain professional education that will allow me to find a
-              exciting job within the field of web development. Previously
-              working at a library, I learned a lot about Information
-              Architecture. I also participated in a number of educational and
-              cultural projects, including crating a multimedia exhibition,
-              which was how I discovered my passion about digital communication.
+              exciting job within the field of web development.
             </p>
           </div>
-          <div id="about-details" class="main-wrapper-about-area2"></div>
+          <h2>What can I do ?</h2>
+
+          <div class="main-wrapper-about-area3">
+            <h3>code</h3>
+            <h4>html | CSS | JavaScript | CMS | GitHub</h4>
+            <p>
+              Watching things coming alive is really rewarding. I guess this is
+              why I always have fun as coding and it doesn't matter that
+              sometimes it can take ages to find the best solution. This is
+              never waisted time. I always do my best to write codes that are
+              well structured and easy to read for my team members. My skills
+              include html, css, javascript. I have also experience of working
+              with github, sass, bootstrap and other libraries.
+            </p>
+          </div>
+          <div class="main-wrapper-about-area4">
+            <img
+              src="img/ilustracja_portfolio3.png"
+              alt="illustration portfolio"
+            />
+          </div>
+          <div class="main-wrapper-about-area5">
+            <img
+              src="img/ilustracja_portfolio2.png"
+              alt="illustration portfolio"
+            />
+          </div>
+          <div class="main-wrapper-about-area6">
+            <h3>design</h3>
+            <h4>photoshop | illustrator | XD</h4>
+            <p>
+              This is the point when my passion meets professional challenges. I
+              truly love all adobe application. Before using them as a hobby now
+              I have a chance to try my skills in more professional environment.
+              At the moment I am mostly focused at User Interface. I like to
+              keep things simple but I'm always encourage to produce very
+              different things so there is no risk of getting stack in one
+              place.
+            </p>
+          </div>
         </div>
       </section>
       <section id="contactSection" class="contactSection">
