--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             </p>
           </div>
         </div>
-        <img class="cloud" src="img/cloud1.png" alt="" />
-        <img id="cloud-2" class="cloud" src="img/cloud1.png" alt="" />
-        <img id="cloud-3" class="cloud" src="img/cloud1.png" alt="" />
+        <!-- <img class="cloud" src="img/cloud1.png" alt="" /> -->
+        <!-- <img id="cloud-2" class="cloud" src="img/cloud1.png" alt="" /> -->
+        <!-- <img id="cloud-3" class="cloud" src="img/cloud1.png" alt="" /> -->
       </section>
       <section id="portfolioSection" class="portfolioSection">
         <div class="portfolio-wrapper">
@@ -73,6 +73,112 @@
             <p>Short description</p>
             <div><button>read more</button></div>
           </div> -->
+        </div>
+      </section>
+
+      <section id="projectSection" class="projectSection hide">
+        <div class="projectSectionWP">
+          <div class="projectSectionWP-area0">
+            <button class="closeModal">x</button>
+          </div>
+
+          <div class="projectSectionWP-area1">
+            <h1>Title</h1>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+              eligendi dolore reprehenderit nihil autem quaerat ab. Ratione
+              odit, aliquid nesciunt in nulla aliquam vel obcaecati, quis, quod
+              iure ab error. Lorem ipsum, dolor sit amet consectetur adipisicing
+              elit. Odit eligendi dolore reprehenderit nihil autem quaerat ab.
+              Ratione odit, aliquid nesciunt in nulla aliquam vel obcaecati,
+              quis, quod iure ab error.
+            </p>
+            <button class="openProject">see the project</button>
+          </div>
+          <div class="projectSectionWP-area2">
+            <div class="container">
+              <div class="mySlides">
+                <div class="numbertext">1 / 3</div>
+                <img src="img/Asset 1.png" style="width:100%" />
+              </div>
+
+              <div class="mySlides">
+                <div class="numbertext">2 / 3</div>
+                <img src="img/Capture_desktop MD.PNG" style="width:100%" />
+              </div>
+              <div class="mySlides">
+                <div class="numbertext">3 / 3</div>
+                <img src="img/We-bike_small.png" style="width:100%" />
+              </div>
+
+              <a class="prev" onclick="plusSlides(-1)">❮</a>
+              <a class="next" onclick="plusSlides(1)">❯</a>
+
+              <div class="row">
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="img/Asset 1.png"
+                    style="width:100%"
+                    onclick="currentSlide(1)"
+                    alt="The Woods"
+                  />
+                </div>
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="img/Capture_desktop MD.PNG"
+                    style="width:100%"
+                    onclick="currentSlide(2)"
+                    alt="Cinque Terre"
+                  />
+                </div>
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="img/We-bike_small.png"
+                    style="width:100%"
+                    onclick="currentSlide(3)"
+                    alt="Mountains and fjords"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <script>
+              var slideIndex = 1;
+              showSlides(slideIndex);
+
+              function plusSlides(n) {
+                showSlides((slideIndex += n));
+              }
+
+              function currentSlide(n) {
+                showSlides((slideIndex = n));
+              }
+
+              function showSlides(n) {
+                var i;
+                var slides = document.getElementsByClassName("mySlides");
+                var dots = document.getElementsByClassName("demo");
+                var captionText = document.getElementById("caption");
+                if (n > slides.length) {
+                  slideIndex = 1;
+                }
+                if (n < 1) {
+                  slideIndex = slides.length;
+                }
+                for (i = 0; i < slides.length; i++) {
+                  slides[i].style.display = "none";
+                }
+                for (i = 0; i < dots.length; i++) {
+                  dots[i].className = dots[i].className.replace(" active", "");
+                }
+                slides[slideIndex - 1].style.display = "block";
+                dots[slideIndex - 1].className += " active";
+              }
+            </script>
+          </div>
         </div>
       </section>
       <section id="aboutSection" class="aboutSection">
@@ -142,14 +248,15 @@
       <section id="contactSection" class="contactSection">
         <div class="wrapper-contact">
           <div class="wrapper-contact-area1">
-            <h1>Contact me:</h1>
+            <h1>GET IN TOUCH !</h1>
+            <p>I'm currently looking for an intership position</p>
             <div class="contactDetails">
               <div>
-                <img src="img/phone-icon.png" alt="phone-icon" />
+                <img src="img/phone-icon-wh.png" alt="phone-icon" />
                 <h3>004531843813</h3>
               </div>
               <div>
-                <img src="img/mail-icon.png" alt="mail-icon" />
+                <img src="img/mail-icon-wh.png" alt="mail-icon" />
                 <h3>marta.netza@yahoo.com</h3>
               </div>
             </div>
@@ -157,19 +264,22 @@
               <a
                 href="https://www.linkedin.com/in/marta-netza-2a04b713b/?originalSubdomain=dk"
               >
-                <img src="img/in-icon.png" alt="in-icon" />
+                <img src="img/in-wh.png" alt="in-icon" />
               </a>
               <a href="https://www.instagram.com/martan2210/">
-                <img src="img/insta-icon.png" alt="insta-icon" />
+                <img src="img/inst-wh.png" alt="insta-icon" />
               </a>
               <a href="https://www.behance.net/MartaN2210">
-                <img src="img/be-icon.png" alt="be-icon" />
+                <img src="img/be-wh.png" alt="be-icon" />
               </a>
             </div>
           </div>
 
           <div class="wrapper-contact-area2">
-            <img src="img/contact.png" alt="contact" />
+            <!-- <img src="img/contact.png" alt="contact" /> -->
+            <input type="text" placeholder="Name" />
+            <input type="text" placeholder="Email" />
+            <textarea name="notes" placeholder="Message"></textarea>
           </div>
         </div>
       </section>
@@ -179,7 +289,9 @@
         <img src="img/Asset 1.png" alt="" />
         <h1>Title</h1>
         <p>Short description</p>
-        <div><button>read more</button></div>
+        <div>
+          <button><a href="#projectSection">read more</a></button>
+        </div>
       </article>
     </template>
     <template class="templateAbout">
@@ -189,6 +301,5 @@
       </article>
     </template>
     <script src="index1.js"></script>
-    <script src="index.js"></script>
   </body>
 </html>
