--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             </p>
           </div>
         </div>
-        <img class="cloud" src="img/cloud1.png" alt="" />
-        <img id="cloud-2" class="cloud" src="img/cloud1.png" alt="" />
-        <img id="cloud-3" class="cloud" src="img/cloud1.png" alt="" />
+        <!-- <img class="cloud" src="img/cloud1.png" alt="" /> -->
+        <!-- <img id="cloud-2" class="cloud" src="img/cloud1.png" alt="" /> -->
+        <!-- <img id="cloud-3" class="cloud" src="img/cloud1.png" alt="" /> -->
       </section>
       <section id="portfolioSection" class="portfolioSection">
         <div class="portfolio-wrapper">
