contact section styling

--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
             <h1>GET IN TOUCH !</h1>
             <p>I'm currently looking for an intership position</p>
             <div class="contactDetails">
-              <div>
-                <img src="img/phone-icon-wh.png" alt="phone-icon" />
+              <div class="contBox">
+                <div><img src="img/phone-icon-wh.png" alt="phone-icon" /></div>
                 <h3>004531843813</h3>
               </div>
-              <div>
-                <img src="img/mail-icon-wh.png" alt="mail-icon" />
+              <div class="contBox">
+                <div><img src="img/mail-icon-wh.png" alt="mail-icon" /></div>
                 <h3>marta.netza@yahoo.com</h3>
               </div>
             </div>
