--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@
             </p>
           </div>
         </div>
+        <a href="#contactSection">
+          <div class="cv-button">
+            <div><img src="img/cv-icon-wh.png" alt="" /></div>
+
+            <p>check my CV</p>
+          </div>
+        </a>
       </section>
       <section id="contactSection" class="contactSection">
         <div class="wrapper-contact">
