--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             </h5>
             <p>
               I'm currently studying at Copenhagen School of Technology and
-              Design to gain professional education that will allow me to find a
-              exciting job within the field of web development.
+              Design to gain professional education that will allow me to find
+              an exciting job within the field of web development.
             </p>
           </div>
           <h2>What can I do ?</h2>
@@ -246,8 +246,79 @@
         </div>
         <a href="#contactSection">
           <div class="cv-button">
-            <div><img src="img/cv-icon-wh.png" alt="" /></div>
-
+            <!-- <div><img src="img/cv-icon-wh.png" alt="" /></div> -->
+            <div>
+              <svg
+                id="Layer_1"
+                data-name="Layer 1"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 128.62 158.49"
+              >
+                <defs></defs>
+                <title>cv-icon</title>
+                <polygon
+                  class="cls-1"
+                  points="33.88 1.5 33.69 1.7 33.69 1.5 33.88 1.5"
+                />
+                <line
+                  class="cls-2"
+                  x1="11.71"
+                  y1="60.96"
+                  x2="94.4"
+                  y2="61.26"
+                />
+                <line
+                  class="cls-2"
+                  x1="11.71"
+                  y1="76.65"
+                  x2="94.4"
+                  y2="76.95"
+                />
+                <line class="cls-2" x1="11.71" y1="92.6" x2="94.4" y2="92.9" />
+                <line
+                  class="cls-2"
+                  x1="11.71"
+                  y1="109.29"
+                  x2="94.4"
+                  y2="109.59"
+                />
+                <path
+                  class="cls-3"
+                  d="M110.86,174.87a.66.66,0,0,0,.66.66h34.86a.67.67,0,0,1,.66.66v4.25a.66.66,0,0,0,1.12.47l14.43-14.43a.65.65,0,0,0,0-.93l-14.43-14.44a.66.66,0,0,0-1.12.47v4.25a.66.66,0,0,1-.66.66H111.52a.66.66,0,0,0-.66.66Z"
+                  transform="translate(-34.17 -22.61)"
+                />
+                <path
+                  class="cls-3"
+                  d="M69,22.61V53.1a4.68,4.68,0,0,1-4.74,4.59H34.17V56.56L67.42,23.7V22.61Z"
+                  transform="translate(-34.17 -22.61)"
+                />
+                <path
+                  class="cls-3"
+                  d="M141.12,22.61H67.36a4.65,4.65,0,0,1-.72.82,4.86,4.86,0,0,1-.6.6L34.17,56.56V160.68a4.26,4.26,0,0,0,4.26,4.26H141.12a4.27,4.27,0,0,0,4.27-4.26V26.88A4.28,4.28,0,0,0,141.12,22.61Zm1.27,138.07a1.26,1.26,0,0,1-1.27,1.26H38.43a1.24,1.24,0,0,1-1.26-1.26V57.78l.09-.09,30.6-31.23.83-.85h72.43a1.27,1.27,0,0,1,1.27,1.27Z"
+                  transform="translate(-34.17 -22.61)"
+                />
+                <circle class="cls-2" cx="79.72" cy="21.31" r="5.83" />
+                <path
+                  class="cls-2"
+                  d="M101.2,64a12.69,12.69,0,0,1,25.37,0"
+                  transform="translate(-34.17 -22.61)"
+                />
+                <line
+                  class="cls-2"
+                  x1="92.4"
+                  y1="41.42"
+                  x2="67.03"
+                  y2="41.42"
+                />
+                <line
+                  class="cls-4"
+                  x1="65.6"
+                  y1="41.95"
+                  x2="93.93"
+                  y2="41.97"
+                />
+              </svg>
+            </div>
             <p>check my CV</p>
           </div>
         </a>
@@ -284,9 +355,16 @@
 
           <div class="wrapper-contact-area2">
             <!-- <img src="img/contact.png" alt="contact" /> -->
-            <input type="text" placeholder="Name" />
-            <input type="text" placeholder="Email" />
-            <textarea name="notes" placeholder="Message"></textarea>
+            <form action="send message">
+              <input type="text" id="name" name="name" placeholder="Name" />
+              <input type="text" id="email" name="email" placeholder="Email" />
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Message"
+              ></textarea>
+              <button class="send-button">send</button>
+            </form>
           </div>
         </div>
       </section>
